# FullStack-Research-Assistant

backend/: pyproject.toml
backend/src/: .env  aggregator.py  api.py  states.py  websearch.py
frontend/: package-lock.json  package.json
frontend/src/app/: page.tsx
frontend/src/app/components/: chatbot.js
